[tool.poetry]
name = "trip-planner-assistant"
version = "0.1.0"
description = "AI assistant trip planner"
authors = ["Joao Mouram, Brandon Hancock, Rob Merchant"]

[tool.poetry.dependencies]
python = ">=3.11.7,<3.12"
crewai = "^0.11.0"
unstructured = '==0.10.25'
# weather data
pyowm = '3.3.0'
python-dotenv = '1.0.1'
langchain-openai = ">=0.0.6"   # note: crewai uses an out-of-date version

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
